fix: adjust button icon positioning for improved visibility

--- a/assets/bi-custom.css
+++ b/assets/bi-custom.css
@@ -193,8 +193,8 @@ h5,
     background-image: url("https://cdn.shopify.com/s/files/1/0742/2669/6436/files/button-icon.svg?v=1746020835");
     background-repeat: no-repeat;
     position: absolute;
-    right: 0;
-    top: -10px;
+    right: 28px;
+    top: 13px;
     width: 12px;
     height: 15px;
 }
